Bug 354363 - Writing-to-temporary should not warn on QDomNode::firstChild()
Summary: Writing-to-temporary should not warn on QDomNode::firstChild()
Status: RESOLVED FIXED
Alias: None
Product: clazy
Classification: Developer tools
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-25 21:14 UTC by Nyall Dawson
Modified: 2015-10-26 21:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nyall Dawson 2015-10-25 21:14:09 UTC
The writing-to-temporary check warns when the result of QDomNode::firstChild() is modified. However this is valid, as the QomNode docs state:

"changing the returned node will also change the node in the document tree".
Comment 1 Sergio Martins 2015-10-26 21:32:49 UTC
Git commit f4e5ec481a958ac4e253cf80bd8074edd37d5f5a by Sergio Martins.
Committed on 26/10/2015 at 21:31.
Pushed by smartins into branch 'master'.

writing-to-temporary: Don't warn on QDomNode

It's copies are shallow.

M  +2    -1    checks/writingtotemporary.cpp
M  +11   -0    tests/writing-to-temporary/main.cpp

http://commits.kde.org/clazy/f4e5ec481a958ac4e253cf80bd8074edd37d5f5a