writing-to-temporary: Don't warn on QDomNode

It's copies are shallow.
BUG: 354363