checks/writingtotemporary.cpp
@@ -50,7 +50,8 @@ std::vector<string> WritingToTemporary::filesToIgnore() const
 
 static bool isDisallowedClass(const string &className)
 {
-    static const vector<string> disallowed = { "QTextCursor", "QDomElement", "KConfigGroup", "QWebElement", "QScriptValue", "QTextLine", "QTextBlock" };
+    static const vector<string> disallowed = { "QTextCursor", "QDomElement", "KConfigGroup", "QWebElement",
+                                               "QScriptValue", "QTextLine", "QTextBlock", "QDomNode" };
     return find(disallowed.cbegin(), disallowed.cend(), className) != disallowed.cend();
 }
 
